Add Earth Engine test layer

--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -16,10 +16,15 @@
 		})();
 	</script>
 	
+	<script type="text/javascript">
+		if( ! window.JSON )
+			document.write( '<script type="text/javascript" src="js/json2.js"><\/script>' );
+	</script>
 	
 	<script type="text/javascript" src="js/scriptino-base.js"></script>
 	<script type="text/javascript" src="js/scriptino-tabs.js"></script>
 	<script type="text/javascript" src="js/scriptino-map.js"></script>
+	<script type="text/javascript" src="js/scriptino-earthengine.js"></script>
 	<script type="text/javascript" src="js/rangeinput.js"></script>
 	<script type="text/javascript" src="js/mColorPicker.js"></script>
 	<script type="text/javascript" src="js/claslite.js"></script>
