Rearrange tagline and subtitle

--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -41,7 +41,11 @@
 		<div id="header">
 			
 			<div id="header-tagline">
-				Forest Monitoring<br />by Carnegie
+				Forest<br /> Monitoring
+			</div>
+			
+			<div id="header-subtitle">
+				by Carnegie
 			</div>
 			
 			<div id="header-links">
