--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -41,7 +41,8 @@
 		<div id="header">
 			
 			<div id="header-tagline">
-				Forest<br /> Monitoring
+				<!--Forest<br /> Monitoring-->
+				Forest Monitoring
 			</div>
 			
 			<div id="header-subtitle">
