--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -326,6 +326,15 @@
 		<!-- End Main Body -->
 		
 		<div id="earth-engine-logo">
+			<div style="color: #666;font-family: arial;font-size: 11px;white-space: nowrap;">
+				Powered by
+				<span style="font-size: 12px;font-weight: bold;">
+					<a href="http://earthengine.googlelabs.com/" style="color:#444;text-decoration:none;">
+						<img src="http://www.google.com/images/logos/google_logo_powered_by.png" style="border:none; vertical-align:middle;" />
+						Earth Engine
+					</a>
+				</span>
+			</div>
 		</div>
 		
 		<div id="cis-logo">
