--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -325,7 +325,7 @@
 		
 		<!-- End Main Body -->
 		
-		<a id="earth-engine-logo" href="http://earthengine.googlelabs.com/">
+		<a id="earth-engine-logo" target="_new" href="http://earthengine.googlelabs.com/">
 			<span id="earth-engine-logo-powered-by">
 				Powered by
 			</span>
