Update page title

--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	
-	<title>CLASlite Forest Monitoring by Carnegie</title>
+	<title>CLASlite Forest Monitoring - Carnegie Institution for Science</title>
 	
 	<link type="text/css" href="css/claslite.css" rel="stylesheet" />
 	
