--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -294,6 +294,8 @@
 									<b>Units:</b>
 								</label>
 								<select id="statistics-units-select">
+									<option value="0.3048|ft&#178;">Square Feet (ft&#178;)</option>
+									<option value="1|m&#178;">Square Meters (m&#178;)</option>
 									<option value="4046.85642|acres">Acres</option>
 									<option value="10000|hectares" selected="selected">Hectares</option>
 									<option value="1000000|km&#178;">Square Kilometers (km&#178;)</option>
