--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -294,12 +294,12 @@
 									<b>Units:</b>
 								</label>
 								<select id="statistics-units-select">
-									<option value="0.3048|ft&#178;">Square Feet (ft&#178;)</option>
-									<option value="1|m&#178;">Square Meters (m&#178;)</option>
-									<option value="4046.85642|acres">Acres</option>
-									<option value="10000|hectares" selected="selected">Hectares</option>
-									<option value="1000000|km&#178;">Square Kilometers (km&#178;)</option>
-									<option value="2589988.11|mi&#178;">Square Miles (mi&#178;)</option>
+									<option value="0.3048|ft&#178;|square feet">Square Feet (ft&#178;)</option>
+									<option value="1|m&#178;|square meters">Square Meters (m&#178;)</option>
+									<option value="4046.85642|ac|acres">Acres</option>
+									<option value="10000|ha|hectares" selected="selected">Hectares</option>
+									<option value="1000000|km&#178;|square kilometers">Square Kilometers (km&#178;)</option>
+									<option value="2589988.11|mi&#178;|square miles">Square Miles (mi&#178;)</option>
 								</select>
 							</div>
 							
