Update to new JSON demo data

--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -157,8 +157,8 @@
 								<label for="nonforest-color">Non-forest</label>
 							</div>
 							<div class="color-picker-row">
-								<input class="color-picker" data-hex="true" name="nodata-color" id="nodata-color" value="#000000">
-								<label for="nodata-color">No data</label>
+								<input class="color-picker" data-hex="true" name="unobserved-color" id="unobserved-color" value="#000000">
+								<label for="unobserved-color">No data</label>
 							</div>
 							<!-- End TODO -->
 							
