Put checkmark on active Map/Stats button

--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -133,9 +133,9 @@
 						<form class="input-form" id="forestview-input-form">
 							
 							<div class="float-right">
-								<button class="view-button submit" type="submit" id="view-forestview-map">Map</button>
+								<button class="view-button submit" type="submit" id="view-forestview-map"><div class="inline-block sprite icon16 icon16-tick"></div>&nbsp;Map</button>
 								<div style="margin-bottom: 4px;"></div>
-								<button class="view-button" id="view-forestview-stats">Stats</button>
+								<button class="view-button" id="view-forestview-stats"><div class="inline-block sprite icon16"></div>&nbsp;Stats</button>
 							</div>
 							
 							<div style="margin-bottom:16px;">
