--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -170,7 +170,7 @@
 								</div>
 								<div class="color-picker-row">
 									<input class="color-picker" data-hex="true" name="unobserved-color" id="unobserved-color" value="#000000">
-									<label for="unobserved-color">No data</label>
+									<label for="unobserved-color">Unobserved</label>
 								</div>
 								<!-- End TODO -->
 							</div>
