Change for-map and for-stats classes to map-only and stats-only for clarity

--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -198,7 +198,7 @@
 								</div>
 							</div>
 							
-							<div class="slider-panel for-map">
+							<div class="slider-panel map-only">
 								<label for="forestview-opacity" class="slider-label">Opacity</label>
 								<input type="range" class="range layer-slider" min="0" max="100" value="50" id="forestview-opacity" />
 							</div>
@@ -206,7 +206,7 @@
 							<div class="clear-both">
 							</div>
 							
-							<div class="units for-stats" id="statistics-units">
+							<div class="units stats-only" id="statistics-units">
 								<label for="statistics-units-select">
 									<b>Units:</b>
 								</label>
