Hide forest cover and forest change color pickers in stats view

--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -158,7 +158,7 @@
 							<div class="clear-right">
 							</div>
 							
-							<div class="forestview-forestcover">
+							<div class="forestview-forestcover map-only">
 								<!-- TODO: refactor -->
 								<div class="color-picker-row">
 									<input class="color-picker" data-hex="true" name="forest-color" id="forest-color" value="#00ff00">
@@ -175,7 +175,7 @@
 								<!-- End TODO -->
 							</div>
 							
-							<div class="forestview-forestchange">
+							<div class="forestview-forestchange map-only">
 								<div class="section">
 									Layers:
 								</div>
