Move Carnegie logo to header, remove subtitle, put Forest Monitoring on two lines, adjust header layout

--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -42,11 +42,7 @@
 		<div id="header">
 			
 			<div id="header-tagline">
-				Forest Monitoring
-			</div>
-			
-			<div id="header-subtitle">
-				by Carnegie
+				Forest<br />Monitoring
 			</div>
 			
 			<div id="header-links">
@@ -73,6 +69,9 @@
 					<a href="#">Sign out</a>
 				</div>
 				
+			</div>
+			
+			<div id="cis-logo">
 			</div>
 			
 		</div>
@@ -290,9 +289,6 @@
 			<img id="earth-engine-logo-img" src="http://www.google.com/images/logos/google_logo_powered_by.png" style="border:none; vertical-align:middle;" />
 			Earth Engine
 		</a>
-		
-		<div id="cis-logo">
-		</div>
 		
 	</div>
 	
