Link CLASlite and Carnegie logos to their respective websites

--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -41,6 +41,9 @@
 		
 		<div id="header">
 			
+			<a id="claslite-logo" target="_blank" href="http://claslite.ciw.edu/">
+			</a>
+			
 			<div id="header-tagline">
 				Forest<br />Monitoring
 			</div>
@@ -71,8 +74,8 @@
 				
 			</div>
 			
-			<div id="cis-logo">
-			</div>
+			<a id="cis-logo" target="_blank" href="http://carnegiescience.edu/">
+			</a>
 			
 		</div>
 		
