Add color pickers for forest change legends

--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -22,6 +22,7 @@
 	</script>
 	
 	<script type="text/javascript" src="js/scriptino-base.js"></script>
+	<script type="text/javascript" src="js/scriptino-color.js"></script>
 	<script type="text/javascript" src="js/scriptino-tabs.js"></script>
 	<script type="text/javascript" src="js/scriptino-chart.js"></script>
 	<script type="text/javascript" src="js/scriptino-map.js"></script>
@@ -198,7 +199,7 @@
 									<div id="deforestation-legend"></div>
 								</div>
 								
-								<div id="disturbance-layer" style="margin-top:8px;">
+								<div id="disturbance-layer">
 									<input type="radio" name="forestchange-layer-radio" id="disturbance-radio" />
 									<label for="disturbance-radio">Forest Disturbance</label>
 									<div id="disturbance-legend"></div>
