Add icon-button class, not being used yet

--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -102,9 +102,9 @@
 					<div class="forestview-panel">
 						<div class="tab-base-extension center">
 							<form class="input-form forestview" id="forestview-input-form-top">
-								<button class="subtab-button-map view-button submit" type="submit" id="view-forestview-map"><div class="inline-block sprite button-icon icon16 icon16-tick"></div>Map</button>
+								<button class="icon-button subtab-button-map view-button submit" type="submit" id="view-forestview-map"><div class="inline-block sprite button-icon icon16 icon16-tick"></div>Map</button>
 								&nbsp;&nbsp;
-								<button class="subtab-button-stats view-button" id="view-forestview-stats"><div class="inline-block sprite button-icon icon16 hide"></div>Statistics</button>
+								<button class="icon-button subtab-button-stats view-button" id="view-forestview-stats"><div class="inline-block sprite button-icon icon16 hide"></div>Statistics</button>
 							</form>
 						</div>
 					</div>
@@ -148,8 +148,8 @@
 						<form class="input-form" id="forestview-input-form">
 							
 							<div class="float-right">
-								<button class="submit map-only" type="submit" id="view-forestview-view"><div class="inline-block sprite icon16 icon16-arrow-circle"></div>&nbsp;View</button>
-								<button class="submit stats-only" type="submit" id="view-forestview-calc"><div class="inline-block sprite icon16 icon16-arrow-circle"></div>&nbsp;Calculate</button>
+								<button class="submit icon-button map-only" type="submit" id="view-forestview-view"><div class="inline-block sprite icon16 icon16-arrow-circle"></div>&nbsp;View</button>
+								<button class="submit icon-button stats-only" type="submit" id="view-forestview-add"><div class="inline-block sprite icon16 icon16-plus"></div>&nbsp;Calculate</button>
 							</div>
 							
 							<div style="margin-bottom:16px;">
