Expand and collapse sidebar

--- a/web/app/static/claslite.html
+++ b/web/app/static/claslite.html
@@ -92,7 +92,7 @@
 		
 		<!-- Begin Main Body -->
 		
-		<div id="main">
+		<div id="main" class="show-sidebar">
 			
 			<!-- Begin Sidebar Panels -->
 			
@@ -327,6 +327,13 @@
 			</div>
 			
 			<!-- End Statistics -->
+			
+			<!-- Map Hider -->
+			
+			<div id="sidebar-hider" class="sprite icon14x17 sidebar-hider">
+			</div>
+			
+			<!-- End Map Hider -->
 			
 		</div>
 		
