--- a/web/app/static/thanks.html
+++ b/web/app/static/thanks.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Thanks!</title>
+	<title>Thanks</title>
 	<style type="text/css">
 		body {
 			background-color:#ebebeb;
